Changed some css

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
             </ul>
           </div>
         </div>
-        <div class="Content__aboutme second">
-          <p class="Content__aboutme__heading">What I Do?</p>
-          <div class="whatidoflex">
+        <div class="Content__whatido">
+          <p class="Content__whatido__heading">What I Do?</p>
             <div class="whatido">
               <div>
                 <h1>Web  Designing</h1>
@@ -83,8 +82,6 @@
                 <h1>Web  Designing</h1> 
                 <p>nesciunt cupiditate modi quidem cumque porro exercitationem sit dolorum, eaque voluptas id fuga molestiae quibusdam itaque amet! Cumque.</p>
               </div>
-            </div>
-            <div class="whatido">
               <div>
                 <h1>Web  Designing</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipis. Esse nesciunt cupiditate modi quidem cumque porro exercitationem sit dolorum, eaque voluptas id fuga molestiae quibusdam itaque amet! Cumque.</p>
@@ -97,7 +94,6 @@
                 <h1>Web  Designing</h1>
                 <p>Lorem ipsum dolor sit amet unt cupiditate modi quidem cumque porro exercitationem sit dolorum, eaque voluptas id fuga molestiae quibusdam itaque amet! Cumque.</p>
               </div>
-            </div>
         </div>
       </div>
     </main>
